Update admin page.

--- a/index.html
+++ b/index.html
@@ -119,6 +119,8 @@
             </div>
         </section>
         <br>
+        <hr>
+        <br>
         <section id="pedidos">
             <div class="orden">
                 <div class="text-center"><h1>¡Haz tu pedido!</h1></div>
@@ -126,8 +128,10 @@
                 <div class="form-frame row align-items-center justify-content-center position-relative">
                     <div class="col-lg-9">
                         <form action="">
+                            <div class="form-titulo text-center"><h2>Pide tu pastel decorado en línea</h2></div>
                             <br>
-                            <h2 class="text-center">Pide tu pastel decorado en línea</h2>
+                            <br>
+                            <div class="text-center"><h3 >Datos personales</h3></div>
                             <br>
                             <div class="info-personal">
                                 <div class="row align-items-center justify-content-center position-relative">
@@ -162,58 +166,98 @@
                                 </div>
                             </div>
                             <br>
+                            <hr>
                             <br>
                             <div class="text-center"><h3 >Elige tu pastel</h3></div>
                             <br>
                             <div class="pasteles">
                                 <div class="row align-items-center justify-content-center position-relative">
-                                    <div class="col-lg-3 text-left">
-                                        <label><input type="checkbox" id="cbox1" value="pastel1"> Cheesecake  $150 MXN</label><br>
-                                        <label><input type="checkbox" id="cbox2" value="pastel2"> Pastel de Tres Leches  $200 MXN</label><br>
+                                    <div class="col-lg-3 text-center">
+                                        <label><input type="checkbox" id="cbox1" value="pastel1">Cheesecake <br> $150 MXN</label><br>
+                                        <label><input type="checkbox" id="cbox2" value="pastel2"> Pastel de Tres Leches <br> $200 MXN</label><br>
                                     </div>
                                     <div class="col-lg-3 text-center">
-                                        <label><input type="checkbox" id="cbox3" value="pastel3"> Pastel de Chocholate  $170 MXN</label><br>
-                                        <label><input type="checkbox" id="cbox4" value="pastel4"> Pastel de Tres Leches  $200 MXN</label><br>
+                                        <label><input type="checkbox" id="cbox3" value="pastel3"> Pastel de Chocholate <br> $170 MXN</label><br>
+                                        <label><input type="checkbox" id="cbox4" value="pastel4"> Pastel de Tres Leches <br> $200 MXN</label><br>
                                     </div>
-                                    <div class="col-lg-3 text-left">
-                                        <label><input type="checkbox" id="cbox5" value="pastel5"> Pastel de Vainilla  $150 MXN</label><br>
-                                        <label><input type="checkbox" id="cbox6" value="pastel6"> Pastel de Frambuesa  $150 MXN</label><br>
+                                    <div class="col-lg-3 text-center">
+                                        <label><input type="checkbox" id="cbox5" value="pastel5"> Pastel de Vainilla <br> $150 MXN</label><br>
+                                        <label><input type="checkbox" id="cbox6" value="pastel6"> Pastel de Frambuesa <br> $150 MXN</label><br>
                                     </div>
 
                                 </div>
                             </div>
-                            <p style="font-weight: bold; margin: 30px 0;">O ARMA TU PASATEL A TU GUSTO</p>
+                            <br>
+                            <hr>
+                            <br>
+                            <div class="text-center"><h3 >¡O ármalo!</h3></div>
+                            <br>
                             <div class="pastel-personalizado">
-                                <div>
-                                    <p>Selecciona el tipo de pastel</p>
-                                    <label><input type="checkbox" id="cbox1" value="pastel1"> CHEESECAKE</label><br>
-                                    <label><input type="checkbox" id="cbox2" value="pastel2"> TRES LECHES</label><br>
+                                <div class="text-center"><h4>Escoge el tipo de pastel</h4></div>
+                                <br>
+                                <div class="row align-items-center justify-content-center position-relative">
+                                    <div class="col-lg-3 text-center">
+                                        <label><input type="checkbox" id="cbox1" value="pastel1"> Cheesecake</label><br>
+                                    </div>
+                                    <div class="col-lg-3 text-center">
+                                        <label><input type="checkbox" id="cbox2" value="pastel2"> Tres Leches</label><br>
+                                    </div>
+                                    <div class="col-lg-3 text-center">
+                                        <label><input type="checkbox" id="cbox3" value="pastel3"> Pan Normal</label><br>
+                                    </div>
                                 </div>
-                                <div>
-                                    <p>Selecciona el sabor</p>
-                                    <label><input type="checkbox" id="cbox1" value="pastel1"> CHOCOLATE</label><br>
-                                    <label><input type="checkbox" id="cbox2" value="pastel2"> FRESA</label><br>
-                                    <label><input type="checkbox" id="cbox2" value="pastel2"> ZARZAMORA</label><br>
-                                    <label><input type="checkbox" id="cbox2" value="pastel2"> OREO</label><br>
-                                    <label><input type="checkbox" id="cbox2" value="pastel2"> CAJETA</label><br>
-                                    <label><input type="checkbox" id="cbox2" value="pastel2"> MOKA</label><br>
+                                <br>
+                                <div class="text-center"><h4>Selecciona el sabor</h4></div>
+                                <br>
+                                <div class="row align-items-center justify-content-center position-relative">
+                                    <div class="col-lg-3 text-center">
+                                        <label><input type="checkbox" id="cbox1" value="pastel1"> Vainilla</label><br>
+                                        <label><input type="checkbox" id="cbox2" value="pastel2"> Chocolate</label><br>
+                                    </div>
+                                    <div class="col-lg-3 text-center">
+                                        <label><input type="checkbox" id="cbox3" value="pastel3"> Fresa</label><br>
+                                        <label><input type="checkbox" id="cbox4" value="pastel4"> Zarzamora</label><br>
+                                    </div>
+                                    <div class="col-lg-3 text-center">
+                                        <label><input type="checkbox" id="cbox5" value="pastel5"> Frambuesa</label><br>
+                                        <label><input type="checkbox" id="cbox6" value="pastel6"> Oreo </label><br>
+                                    </div>
                                 </div>
-                                <div>
-                                    <p>Sellecciona algun adorno</p>
-                                    <label><input type="checkbox" id="cbox1" value="pastel1"> TAREJETA DE FELICITACIÓN</label><br>
-                                    <label><input type="checkbox" id="cbox2" value="pastel2"> MOÑO</label><br>
-                                    <label><input type="checkbox" id="cbox2" value="pastel2"> LETRERO DE FELICITACIÓN</label><br>
+                                <br>
+                                <div class="text-center"><h4>Complementos extra</h4></div>
+                                <br>
+                                <div class="row align-items-center justify-content-center position-relative">
+                                    <div class="col-lg-9 text-center">
+                                        <label><input type="checkbox" id="cbox1" value="pastel1"> Chispas de colores</label><br>
+                                        <label><input type="checkbox" id="cbox2" value="pastel2"> Nuez </label><br>
+                                        <label><input type="checkbox" id="cbox3" value="pastel3"> Mix chocolates </label><br>
+                                    </div>
+                                </div>
+                                <br>
+                                <div class="text-center"><h4>Selecciona tu adorno</h4></div>
+                                <br>
+                                <div class="row align-items-center justify-content-center position-relative">
+                                    <div class="col-lg-9 text-center">
+                                        <label><input type="checkbox" id="cbox1" value="pastel1"> Vela normal</label><br>
+                                        <label><input type="checkbox" id="cbox2" value="pastel2"> Vela bengala</label><br>
+                                        <label><input type="checkbox" id="cbox3" value="pastel3"> Tarjeta de felocitación</label><br>
+                                    </div>
                                 </div>
                             </div>
-                            <button class="btn-enviar" name="button">Enviar</button>
+                            <br>
+                            <div class="form-btn text-center">
+                                <button type="button" class="btn btn-light">Enviar</button>
+                            </div>
+                            <br>
                         </form>
 
                     </div>
                 </div>
             </div>
         </section>
-        
     </main>
+    <br>
+    <br>
     <footer>
         <div class="footer-info">
             <div class="justify-content-center" style="display: flex;">
