--- a/admin.html
+++ b/admin.html
@@ -7,13 +7,13 @@
     <!-- Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;600;700&display=swap" rel="stylesheet"> 
 
     <!-- Bootstrap CSS and Styles-->
     <link rel="stylesheet" href="styles/bootstrap.min.css">
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="stylesheet" href="styles/header.css">
-    <link rel="stylesheet" href="styles/inicio.css">
+    <link rel="stylesheet" href="styles/admin.css">
 
     <!-- jQuery and JS-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -45,6 +45,7 @@
                     <nav class="site-navigation text-left mr-auto" role="navigation">
                         <ul class="site-menu ml-auto">
                             <li><a href="admin.html" class="nav-link">Administrador</a></li>
+                            <li><a href="admin.html#encargos" class="nav-link">Encargos</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -53,7 +54,48 @@
     </header>
 
     <main>
-        
+        <section id="encargos">
+            <h2 style="text-align: center;">PEDIDOS</h2>
+            <div class="contenedor-tarjetas">
+                <div class="tarjeta-menu">
+                    <div>
+                        <p>No. Pedido 13459</p>
+                        <p>Pastel de zanahora</p>
+                    </div>
+                </div>
+                <div class="tarjeta-menu">
+                    <div>
+                        <p>No. Pedido 13456</p>
+                        <p>Pastel de tres leches</p>
+                        <p>Chocolate</p>
+                        <p>Tarjeta de felicitacion</p>
+                    </div>
+                </div>
+                <div class="tarjeta-menu">
+                    <div>
+                        <p>No. Pedido 1987</p>
+                        <p>Cheesecake</p>
+                        <p>Moka</p>
+                        <p>Letrero de felicitacion</p>
+                    </div>
+                </div>
+                <div class="tarjeta-menu">
+                    <div>
+                        <p>No. Pedido 23456</p>
+                        <p>Cheesecake cajeta</p>
+                    </div>
+                </div>
+                <div class="tarjeta-menu">
+                    <div>
+                        <p>No. Pedido 23456</p>
+                        <p>Pastel mil hojas</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="inventario">
+
+        </section>
     </main>
     <footer>
         <div class="footer-info">
